Legg til klient for å hente kravoversikt